--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
             <artifactId>druid</artifactId>
             <version>1.2.5</version>
         </dependency>
+        <!-- 为了兼容老版本 mysql 不可以升级 -->
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
@@ -47,24 +48,25 @@
             <artifactId>lettuce-core</artifactId>
             <version>6.1.0.M1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
+        <!-- https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine -->
         <dependency>
-            <groupId>org.ehcache</groupId>
-            <artifactId>ehcache</artifactId>
-            <version>3.8.1</version>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.9.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.konghq/unirest-java -->
         <dependency>
             <groupId>com.konghq</groupId>
             <artifactId>unirest-java</artifactId>
             <version>4.0.0-RC1</version>
-            <scope>provided</scope>
+            <!--<scope>provided</scope>-->
         </dependency>
+        <!-- 为了兼容老版本 zookeeper 不可以升级 -->
         <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-recipes -->
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
-            <version>5.1.0</version>
+            <version>4.3.0</version>
         </dependency>
         <dependency>
             <groupId>gfw</groupId>
