--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>gfw</groupId>
-    <artifactId>core</artifactId>
+    <artifactId>gfwCore</artifactId>
     <version>2.001</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
-            <version>2.9.0</version>
+            <version>3.0.1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.konghq/unirest-java -->
         <dependency>
@@ -74,7 +74,7 @@
         </dependency>
         <dependency>
             <groupId>gfw</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>gfwCommon</artifactId>
             <version>2.001</version>
         </dependency>
     </dependencies>
